# DataSet-Gen

./: .env.example  .gitignore  README.md  README.zh.md  pyproject.toml  requirements.txt
dataset_gen/: cli.py  config.py  env.py  lang.py  mineru_client.py
dataset_gen/evaluation/: __init__.py  reachability.py  section_coverage.py  semantic_dedup.py
dataset_gen/generation/: docdancer.py  docdancer_io.py  docdancer_llm.py  docdancer_toolkit.py  docdancer_types.py  docdancer_utils.py  docdancer_validation.py  heuristic.py
dataset_gen/indexing/: sqlite_fts.py
dataset_gen/llm/: openai_compat.py
dataset_gen/pipeline/: audit.py  generate.py  ingest.py  search.py  show.py
dataset_gen/processing/: canonicalize.py
dataset_gen/prompts/: __init__.py  docdancer.py
dataset_gen/storage/: doc_store.py
dataset_gen/toolkit/: doc_toolkit.py
dataset_gen/tools/: __init__.py  code_python.py
mineru/: README-zh.md  README.md  mineru_client.py  mineru_main.py  requirements.txt
mineru/mineru_server/: __init__.py  api.py  captioning.py  cli.py  client.py  config.py  env.py  page_assets.py  postprocess.py  prompts.py  runner.py
scripts/: export_eval_json.py  llm_judge_evaluate.py  llm_judge_generate.py  sample_qa_report.py  start_mineru_server_18899.sh
