[project]
name = "dataset-gen"
version = "0.1.0"
description = "Evidence-grounded document QA dataset synthesis for general-domain PDFs."
requires-python = ">=3.10"
dependencies = ["requests>=2.0"]

[project.scripts]
dataset-gen = "dataset_gen.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
